--- a/ui/index.html
+++ b/ui/index.html
@@ -34,7 +34,7 @@
       </header>
 
       <section class='body'>
-        <article class='item pipeline'>
+        <article class='item pipeline' onclick='toggleItem(this)'>
           <header class='header'>
             <button class='run'>
               <svg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' baseProfile='full' width='24' height='24' viewBox='0 0 24.00 24.00' enable-background='new 0 0 24.00 24.00' xml:space='preserve'>
@@ -46,9 +46,66 @@
             <h2>Deploy staging Starbucks.cn</h2>
             <small class='status ok'>Run 6 minutes ago</small>
           </header>
+
+          <section class='body'>
+            <nav class='tabs'>
+              <a class='logs active'>Logs</a>
+              <a class='configuration'>Configuration</a>
+            </nav>
+
+            <div class='console'>stderr  Done.
+Running depmod.
+update-initramfs: deferring update (hook will be called later)
+Examining /etc/kernel/postinst.d.
+run-parts: executing /etc/kernel/postinst.d/apt-auto-removal 3.13.0-85-generic /boot/vmlinuz-3.13.0-85-generic
+run-parts: executing /etc/kernel/postinst.d/initramfs-tools 3.13.0-85-generic /boot/vmlinuz-3.13.0-85-generic
+update-initramfs: Generating /boot/initrd.img-3.13.0-85-generic
+run-parts: executing /etc/kernel/postinst.d/update-notifier 3.13.0-85-generic /boot/vmlinuz-3.13.0-85-generic
+run-parts: executing /etc/kernel/postinst.d/zz-update-grub 3.13.0-85-generic /boot/vmlinuz-3.13.0-85-generic
+Generating grub configuration file ...
+Found linux image: /boot/vmlinuz-3.13.0-85-generic
+Found initrd image: /boot/initrd.img-3.13.0-85-generic
+Found linux image: /boot/vmlinuz-3.13.0-83-generic
+Found initrd image: /boot/initrd.img-3.13.0-83-generic
+Found linux image: /boot/vmlinuz-3.13.0-68-generic
+Found initrd image: /boot/initrd.img-3.13.0-68-generic
+Found memtest86+ image: /boot/memtest86+.elf
+Found memtest86+ image: /boot/memtest86+.bin</div>
+            <footer class='toolbar'>
+              <div class='controls'>
+                <button class='icon fullscreen'>
+                  <svg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' baseProfile='full' width='24' height='24' viewBox='0 0 24.00 24.00' enable-background='new 0 0 24.00 24.00' xml:space='preserve'>
+                  	<path stroke-width='0.2' stroke-linejoin='round' d='M 9.49263,13.0931L 10.9068,14.5073L 6.41421,19L 10,19L 10,21L 3,21L 3,14L 5,14L 5,17.5858L 9.49263,13.0931 Z M 10.9069,9.49266L 9.49265,10.9069L 5,6.41422L 5,10L 3,10L 3,3.00001L 10,3L 10,5L 6.41421,5L 10.9069,9.49266 Z M 14.5074,13.0931L 19,17.5858L 19,14L 21,14L 21,21L 14,21L 14,19L 17.5858,19L 13.0932,14.5073L 14.5074,13.0931 Z M 13.0931,9.49265L 17.5858,5L 14,5L 14,3L 21,3L 21,10L 19,10L 19,6.41421L 14.5073,10.9069L 13.0931,9.49265 Z '/>
+                  </svg>
+                  <span>Fullscreen</span>
+                </button>
+              </div>
+
+              <button class='icon previous'>
+                <svg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' baseProfile='full' width='24' height='24' viewBox='0 0 24.00 24.00' enable-background='new 0 0 24.00 24.00' xml:space='preserve'>
+	                 <path stroke-width='0.2' stroke-linejoin='round' d='M 15.4135,16.5841L 10.8275,11.9981L 15.4135,7.41207L 13.9995,5.99807L 7.99951,11.9981L 13.9995,17.9981L 15.4135,16.5841 Z '/>
+                 </svg>
+                 <span>Previous</span>
+               </button>
+              <span class='dropdown'>
+                <a class='status success'>6 min ago (j8yrjSu23j)</a>
+                <div class='options'>
+                  <a class='status ok'>6 min ago (j8yrjSu23j)</a>
+                  <a class='status error'>6 min ago (j8yrjSu23j)</a>
+                  <a class='status ok active'>6 min ago (j8yrjSu23j)</a>
+                </div>
+              </span>
+              <button class='icon next'>
+                <svg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' baseProfile='full' width='24' height='24' viewBox='0 0 24.00 24.00' enable-background='new 0 0 24.00 24.00' xml:space='preserve'>
+                	<path stroke-width='0.2' stroke-linejoin='round' d='M 8.58527,16.584L 13.1713,11.998L 8.58527,7.41198L 9.99927,5.99798L 15.9993,11.998L 9.99927,17.998L 8.58527,16.584 Z '/>
+                </svg>
+                <span>Next</span>
+              </button>
+            </footer>
+          </section>
         </article>
 
-        <article class='item pipeline active'>
+        <article class='item pipeline' onclick='toggleItem(this)'>
           <header class='header'>
             <button class='run'>
               <svg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' baseProfile='full' width='24' height='24' viewBox='0 0 24.00 24.00' enable-background='new 0 0 24.00 24.00' xml:space='preserve'>
@@ -147,7 +204,16 @@ Found memtest86+ image: /boot/memtest86+.bin</div>
       document.body.classList.add('modal');
       return;
     }
-
+    var toggle = false;
+    function toggleItem(elem) {
+      if (toggle == false) {
+        elem.classList.add('active');
+      } else {
+        elem.classList.remove('active');
+      }
+      toggle = !toggle;
+      return;
+    }
 
   </script>
 </body>
