--- a/ui/index.html
+++ b/ui/index.html
@@ -34,9 +34,9 @@
       </header>
 
       <section class='body'>
-        <article class='item pipeline' onclick='toggleItem(this)'>
+        <article class='item pipeline running' onclick='toggleItem(this)'>
           <header class='header'>
-            <button class='run'>
+            <button class='icon run'>
               <svg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' baseProfile='full' width='24' height='24' viewBox='0 0 24.00 24.00' enable-background='new 0 0 24.00 24.00' xml:space='preserve'>
               	<path stroke-width='0.2' stroke-linejoin='round' d='M 7.99939,5.13684L 7.99939,19.1368L 18.9994,12.1368L 7.99939,5.13684 Z '/>
               </svg>
@@ -107,7 +107,7 @@ Found memtest86+ image: /boot/memtest86+.bin</div>
 
         <article class='item pipeline' onclick='toggleItem(this)'>
           <header class='header'>
-            <button class='run'>
+            <button class='icon run'>
               <svg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' baseProfile='full' width='24' height='24' viewBox='0 0 24.00 24.00' enable-background='new 0 0 24.00 24.00' xml:space='preserve'>
               	<path stroke-width='0.2' stroke-linejoin='round' d='M 7.99939,5.13684L 7.99939,19.1368L 18.9994,12.1368L 7.99939,5.13684 Z '/>
               </svg>
